glibc (2.29-0experimental1) UNRELEASED; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/hurd-i386/submitted-net.diff: rebase.
  * debian/patches/hurd-i386/local-fix-nss.diff: rebase.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix math tests on hppa.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 16 Aug 2019 18:18:15 +0200

glibc (2.29-0experimental0) experimental; urgency=medium

  [ Adam Conrad ]
  * New upstream release 2.29, with git updates up to 2019-02-20:
    - Add PF_XDP, AF_XDP and SOL_XDP to bits/socket.h.  Closes: #933800.
    - debian/symbols.wildcard: Add 2.29, and debian/control: Regenrate.
    - debian/patches/localedata/locales_CH.diff: Applied upstream.
    - debian/patches/localedata/submitted-it_IT-thousands_sep.diff: Upstreamed.
    - debian/patches/localedata/git-en_US-date_fmt.diff: Applied upstream.
    - debian/patches/hurd-i386/git-magic-pid.diff: Applied upstream.
    - debian/patches/hurd-i386/git-interrupt_timeout_EIO.diff: Upstreamed.
    - debian/patches/hurd-i386/git-interrupt_timeout.diff: Applied upstream.
    - debian/patches/hurd-i386/git-intr-msg.diff: Applied upstream.
    - debian/patches/hurd-i386/git-pci.diff: Applied upstream.
    - debian/patches/hurd-i386/git-msync.diff: Applied upstream.
    - debian/patches/hurd-i386/git-spawn-open.diff: Applied upstream.
    - debian/patches/hurd-i386/git-tst-preadvwritev2-common.c.diff: Upstreamed.
    - debian/patches/hurd-i386/git-fcntl64.diff: Applied upstream.
    - debian/patches/hurd-i386/git-lockf-0.diff: Applied upstream.
    - debian/patches/hurd-i386/git-libpthread_setpshared.diff: Upstreamed.
    - debian/patches/hurd-i386/git-AT_EMPTY_PATH.diff: Applied upstream.
    - debian/patches/hurd-i386/git-altstack.diff: Applied upstream.
    - debian/patches/riscv64/git-thread-debugging.diff: Applied upstream.
    - debian/patches/sparc/submitted-sparc64-socketcall.diff: Applied upstream.