@@ -5,6 +5,8 @@ glibc (2.29-0experimental1) UNRELEASED; urgency=medium
   * debian/patches/hurd-i386/local-fix-nss.diff: rebase.
   * debian/patches/git-updates.diff: update from upstream stable branch:
     - Fix math tests on hppa.
+  * debian/testsuite-xfail-debian.mk: XFAIL two new tests on HPPA that are
+    due to a bug in the testsuite, reported upstream.
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 16 Aug 2019 18:18:15 +0200
 
